k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resovva-api
  labels:
    app: resovva
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resovva
  template:
    metadata:
      labels:
        app: resovva
    spec:
      # WICHTIG: Damit K8s sich bei GitHub einloggen kann
      imagePullSecrets:
      - name: ghcr-secret

      containers:
      - name: api
        image: ghcr.io/PasKemp/resovva:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: resovva-service
spec:
  selector:
    app: resovva
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
