k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resovva-ingress
  labels:
    app: resovva
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: resovva-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resovva-frontend-service
                port:
                  number: 80
